--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.16.0",
     "express": "^4.17.1",
     "pg": "^8.3.3",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.61",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.2.3"
