--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,10 +18,7 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "import/extensions": [
       "error",
@@ -37,6 +34,18 @@
       " error",
       {
         "argsIgnorePatterns": "_"
+      }
+    ],
+
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": false
+        }
       }
     ]
   },
