Applying Dependency Inversion Principle to Repositories

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,18 +36,7 @@
         "argsIgnorePatterns": "_"
       }
     ],
-
-    "@typescript-eslint/naming-convention": [
-      "error",
-      {
-        "selector": "interface",
-        "format": ["PascalCase"],
-        "custom": {
-          "regex": "^I[A-Z]",
-          "match": false
-        }
-      }
-    ]
+    "no-useless-constructor": "off"
   },
   "settings": {
     "import/resolver": {
