--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.16.0",
@@ -24,10 +22,13 @@
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.61",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
