--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "pg": "^8.3.3",
     "ts-node-dev": "^1.0.0-pre.61",
     "tsyringe": "^4.4.0",
@@ -36,6 +37,7 @@
     "@types/multer": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
+    "@types/nodemailer": "^6.4.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
