--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "strict": true,
     "strictPropertyInitialization": false,
     "baseUrl": "./src",
-    "paths": { "@modules/*": ["modules/*"], "@config/*": ["config/*"], "@shared/*": ["shared/*"] },
+    "paths": {
+      "@modules/*": ["modules/*"],
+      "@config/*": ["config/*"],
+      "@shared/*": ["shared/*"]
+    },
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
