--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
     "cors": "^2.8.5",
     "date-fns": "^2.16.0",
     "dotenv": "^8.2.0",
@@ -33,6 +34,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.16",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
