Updating env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
+#Aplication
 APP_SECRET=
-APP_WEB_URL=http://localhost:3000
+APP_WEB_URL=
+APP_API_URL=
+
+# Mail Configs
+MAIL_DRIVER=
+
+# AWS Credentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
