--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 #Aplication
 APP_SECRET=
-APP_WEB_URL=
-APP_API_URL=
+APP_API_URL=http://localhost:3333
+APP_WEB_URL=http://localhost:3000
 
 # Mail Configs
 MAIL_DRIVER=
