--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,11 @@ APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
 
 # Mail Configs
-MAIL_DRIVER=
+MAIL_DRIVER=ethereal
 
 # AWS Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+#Storage
+STORAGE_DRIVER=disk
