--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.7",
     "@types/hapi__joi": "^17.1.6",
+    "@types/ioredis": "^4.19.3",
     "@types/jest": "^26.0.16",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
