--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "pg": "^8.3.3",
+    "rate-limiter-flexible": "^2.2.1",
     "redis": "^3.0.2",
     "ts-node-dev": "^1.0.0-pre.61",
     "tsyringe": "^4.4.0",
@@ -47,6 +48,7 @@
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "6.8.0",
