--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 #Aplication
 APP_SECRET=
-APP_API_URL=http://localhost:3333
+APP_API_URL=http://192.168.0.110:3333
 APP_WEB_URL=http://localhost:3000
 
 # Mail Configs
@@ -10,5 +10,11 @@ MAIL_DRIVER=ethereal
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
+#Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
+
+
 #Storage
-STORAGE_DRIVER=disk
+STORAGE_DRIVER=s3
